# angkin-project-management

./: .gitignore  PLAN.md  README.md  app.py  pyproject.toml
pages/: 1_Upload.py  1_Upload_PDF.py  2_Extract.py  2_Review_Items.py  3_BOQ_Summary.py  4_Compute.py  4_History.py  6_Export.py
src/angkin/: __init__.py  config.py
src/angkin/computation/: manhours.py  norms.py  scheduling.py
src/angkin/db/: database.py  models.py
src/angkin/export/: gantt.py  manpower.py  msproject.py
src/angkin/extraction/: __init__.py  confidence.py  llm_fallback.py  parser.py  rasterizer.py  schemas.py  vision.py
src/angkin/extraction/prompts/: __init__.py  concrete.py  floor_tiles.py  masonry.py  painting.py  roofing.py  wall_tiles.py  waterproofing.py  windows_doors.py
