[project]
name = "angkin"
version = "0.1.0"
description = "Residential Construction Project Scheduler for Philippine construction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "streamlit-pdf-viewer>=0.0.7",
    "pypdfium2>=4.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "plotly>=5.24",
    "pandas>=2.2",
    "openpyxl>=3.1",
]

[project.scripts]
angkin = "angkin.cli:main"
